aside align correction

--- a/style.css
+++ b/style.css
@@ -179,7 +179,6 @@ aside ol {
 }
 
 aside li {
-    width: max-content;
     padding: 20px 5px;
     margin: 10px 0 0 0;
     font-size: 20px;
